# leanMultisig

./: .gitignore  CLAUDE.md  Cargo.toml  RANGE_CHECK_NOTES.md  README.md  TODO.md
.github/workflows/: rust.yml
benches/: poseidon2.rs  recursion.rs  xmss.rs
crates/air/: Cargo.toml
crates/air/src/: lib.rs  prove.rs  table.rs  test.rs  uni_skip_utils.rs  utils.rs  verify.rs  witness.rs
crates/compiler/: Cargo.toml  TODO.md
crates/compiler/src/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  grammar.pest  intermediate_bytecode.rs  lang.rs  lib.rs  parser.rs  precompiles.rs
crates/compiler/tests/: fiat_shamir.rs  simple.rs  xmss.rs
crates/lean_compiler/: Cargo.toml
crates/lean_compiler/src/: a_simplify_lang.rs  b_compile_intermediate.rs  c_compile_final.rs  c_compile_to_low_level_bytecode.rs  d_compile_range_checks.rs  grammar.pest  intermediate_bytecode.rs  lang.rs  lib.rs  parser.rs  precompiles.rs
crates/lean_compiler/src/ir/: bytecode.rs  instruction.rs  mod.rs  operation.rs  value.rs
crates/lean_compiler/src/parser/: error.rs  grammar.rs  lexer.rs  mod.rs
crates/lean_compiler/src/parser/parsers/: expression.rs  function.rs  literal.rs  mod.rs  program.rs  statement.rs
crates/lean_compiler/tests/: test_compiler.rs  test_range_check.rs  test_range_checks.rs
crates/lean_prover/: Cargo.toml  TECHNICAL_NOTES.md
crates/lean_prover/src/: common.rs  lib.rs  prove_execution.rs  verify_execution.rs
crates/lean_prover/tests/: test_zkvm.rs
crates/lean_prover/vm_air/: Cargo.toml
crates/lean_prover/vm_air/src/: dot_product_air.rs  execution_air.rs
crates/lean_prover/witness_generation/: Cargo.toml
crates/lean_prover/witness_generation/src/: execution_trace.rs  instruction_encoder.rs  lib.rs  poseidon_tables.rs
crates/lean_runner/: Cargo.toml
crates/lean_runner/src/: lib.rs  profiler.rs  runner.rs  stack_trace.rs
crates/lean_vm/: Cargo.toml
crates/lean_vm/src/: error.rs  lean_isa.rs  lib.rs  memory.rs  runner.rs
crates/lean_vm/src/core/: constants.rs  label.rs  mod.rs  types.rs
crates/lean_vm/src/diagnostics/: error.rs  mod.rs  stack_trace.rs
crates/lean_vm/src/execution/: context.rs  memory.rs  mod.rs  runner.rs  tests.rs
crates/lean_vm/src/isa/: bytecode.rs  hint.rs  instruction.rs  mod.rs  operation.rs
crates/lean_vm/src/isa/operands/: mem_or_constant.rs  mem_or_fp.rs  mem_or_fp_or_constant.rs  mod.rs
crates/lean_vm/src/witness/: dot_product.rs  mod.rs  multilinear_eval.rs  poseidon16.rs  poseidon24.rs
crates/lean_vm/tests/: test_lean_vm.rs
crates/lookup/: Cargo.toml
crates/lookup/src/: lib.rs  logup_star.rs  product_gkr.rs  quotient_gkr.rs
crates/packed_pcs/: Cargo.toml
crates/packed_pcs/src/: lib.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: batch_pcs.rs  combinatorics.rs  lib.rs  packed_pcs.rs  pcs.rs  ring_switch.rs
crates/rec_aggregation/: Cargo.toml  recursion_program.lean_lang  whir_proof.json
crates/rec_aggregation/src/: common.rs  lib.rs  recursion.rs  xmss_aggregate.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: lib.rs  mle.rs  prove.rs  sc_computation.rs  verify.rs
crates/utils/: Cargo.toml
crates/utils/src/: constraints_checker.rs  constraints_folder.rs  display.rs  lib.rs  logs.rs  misc.rs  multilinear.rs  packed_constraints_folder.rs  point.rs  poseidon2.rs  univariate.rs  wrappers.rs
crates/vm/: Cargo.toml  TECHNICAL_NOTES.md  TODO.md
crates/vm/src/: bytecode.rs  lib.rs  memory.rs  runner.rs  stack_trace.rs
crates/xmss/: Cargo.toml
crates/xmss/src/: lib.rs  phony_xmss.rs  wots.rs  xmss.rs
crates/xmss/tests/: test_xmss.rs
crates/zk_vm/: Cargo.toml
crates/zk_vm/src/: air.rs  common.rs  dot_product_air.rs  execution_trace.rs  instruction_encoder.rs  lib.rs  poseidon_tables.rs  prove_execution.rs  verify_execution.rs
crates/zk_vm/tests/: test_zkvm.rs
crates/zk_vm/zk_vm_air/: Cargo.toml
crates/zk_vm/zk_vm_air/src/: dot_product_air.rs  execution_air.rs  lib.rs
crates/zk_vm/zk_vm_trace/: Cargo.toml
crates/zk_vm/zk_vm_trace/src/: execution_trace.rs  instruction_encoder.rs  lib.rs  poseidon_tables.rs
docs/benchmark_graphs/: main.py  pyproject.toml
docs/whirlaway_pdf/: bibliography.bib  main.tex
src/: main.rs
src/examples/: mod.rs  prove_poseidon2.rs
