[package]
name = "whirlaway"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*", "crates/lean_prover/vm_air", "crates/lean_prover/witness_generation"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.dead_code = "allow"
rustdoc.all = "warn"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
should_panic_without_expect = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
cast_sign_loss = "allow"

[workspace.dependencies]
# Local
air = { path = "crates/air" }
utils = { path = "crates/utils" }
lean_vm = { path = "crates/lean_vm" }
xmss = { path = "crates/xmss" }
packed_pcs = { path = "crates/packed_pcs" }
lookup = { path = "crates/lookup" }
lean_compiler = { path = "crates/lean_compiler" }
lean_prover = { path = "crates/lean_prover" }
rec_aggregation = { path = "crates/rec_aggregation" }
witness_generation = { path = "crates/lean_prover/witness_generation" }
vm_air = { path = "crates/lean_prover/vm_air" }

# External
thiserror = "2.0"
rand = "0.9.2"
sha3 = "0.10.8"
rayon = "1.5.1"
derive_more = { version = "2.0.1", features = ["full"] }
pest = "2.7"
pest_derive = "2.7"
colored = "3.0.0"
tracing = "0.1.26"
serde_json = "*"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.2.0", features = ["ansi", "smallvec"] }
p3-koala-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-baby-bear = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-field = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-poseidon2 = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-matrix = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-blake3 = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-symmetric = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-air = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-uni-stark = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-poseidon2-air = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-goldilocks = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-challenger = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }
p3-util = { git = "https://github.com/TomWambsgans/Plonky3.git", branch = "lean-multisig" }

whir-p3 = { git = "https://github.com/TomWambsgans/whir-p3", branch = "lean-multisig" }
multilinear-toolkit = { git = "https://github.com/leanEthereum/multilinear-toolkit.git" }

[dependencies]
air.workspace = true
p3-field.workspace = true
p3-koala-bear.workspace = true
p3-poseidon2.workspace = true
rand.workspace = true
p3-poseidon2-air.workspace = true
p3-matrix.workspace = true
p3-challenger.workspace = true
p3-symmetric.workspace = true
whir-p3.workspace = true
p3-uni-stark.workspace = true
utils.workspace = true
p3-util.workspace = true
packed_pcs.workspace = true
p3-air.workspace = true
multilinear-toolkit.workspace = true

# [patch."https://github.com/TomWambsgans/Plonky3.git"]
# p3-koala-bear = { path = "../zk/Plonky3/koala-bear" }
# p3-field = { path = "../zk/Plonky3/field" }
# p3-poseidon2 = { path = "../zk/Plonky3/poseidon2" }
# p3-matrix = { path = "../zk/Plonky3/matrix" }
# p3-symmetric = { path = "../zk/Plonky3/symmetric" }
# p3-air = { path = "../zk/Plonky3/air" }
# p3-uni-stark = { path = "../zk/Plonky3/uni-stark" }
# p3-poseidon2-air = { path = "../zk/Plonky3/poseidon2-air" }
# p3-dft = { path = "../zk/Plonky3/dft" }
# p3-challenger = { path = "../zk/Plonky3/challenger" }

# [patch."https://github.com/TomWambsgans/whir-p3.git"]
# whir-p3 = { path = "../zk/whir/fork-whir-p3" }

# [patch."https://github.com/leanEthereum/multilinear-toolkit.git"]
# multilinear-toolkit = { path = "../zk/multilinear-toolkit" }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
rec_aggregation.workspace = true

[[bench]]
name = "poseidon2"
harness = false

[[bench]]
name = "recursion"
harness = false

[[bench]]
name = "xmss"
harness = false
