[package]
name = "air"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
tracing.workspace = true
sumcheck.workspace = true
utils.workspace = true
whir-p3.workspace = true
rayon.workspace = true
# p3-symmetric.workspace = true
p3-air.workspace = true
p3-uni-stark.workspace = true
# p3-challenger.workspace = true
p3-matrix.workspace = true
# pcs.workspace = true
p3-util.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
p3-matrix.workspace = true
rand.workspace = true
