[package]
name = "compiler"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pest.workspace = true
pest_derive.workspace = true
utils.workspace = true
p3-field.workspace = true
xmss.workspace = true
rand.workspace = true
p3-poseidon2.workspace = true
p3-koala-bear.workspace = true
p3-challenger.workspace = true
p3-air.workspace = true
p3-matrix.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true
whir-p3.workspace = true
rayon.workspace = true
tracing.workspace = true
air.workspace = true
pcs.workspace = true
p3-poseidon2-air.workspace = true
lookup.workspace = true
sumcheck.workspace = true
vm.workspace = true
