[package]
name = "lean_runner"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
#utils.workspace = true
#rand.workspace = true
#rayon.workspace = true
#tracing.workspace = true
lean_vm.workspace = true

[dev-dependencies]
rayon = "1.11.0"
rand_chacha = "0.9.0"
