[package]
name = "packed_pcs"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
tracing.workspace = true
utils.workspace = true
whir-p3.workspace = true
rayon.workspace = true
serde.workspace = true
p3-util.workspace = true

[dev-dependencies]
p3-koala-bear.workspace = true
rand.workspace = true