[package]
name = "utils"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
rayon.workspace = true
p3-air.workspace = true
p3-matrix.workspace = true
p3-challenger.workspace = true
whir-p3.workspace = true
p3-symmetric.workspace = true
p3-koala-bear.workspace = true
rand.workspace = true
tracing-forest.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
tracing-subscriber.workspace = true
# p3-util.workspace = true