[package]
name = "utils"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
p3-field.workspace = true
rayon.workspace = true
p3-air.workspace = true
p3-matrix.workspace = true
p3-challenger.workspace = true
p3-koala-bear.workspace = true
tracing-forest.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
tracing-subscriber.workspace = true
p3-util.workspace = true
multilinear-toolkit.workspace = true

[dev-dependencies]
rand.workspace = true
